# Mira

./: .gitattributes  .gitignore  README.md  README.zh-CN.md  build.gradle  claude_desktop_config.json  mira-cli  mira-ios  mira-web  pyproject.toml
.codex/skills/: mira-article-updater  mira-case-capture  mira-detection-distill  mira-topic-maintainer
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  dependency-review.yml  release-tag.yml
.planning/todos/pending/: 2026-04-22-align-ios-detection-points-with-android.md
android/app/: build.gradle
apps/console/: package-lock.json  package.json
apps/console/app/: globals.css  layout.tsx  page.tsx
apps/console/components/: ConsoleChrome.tsx  DeviceFrame.tsx  LiveScreenViewer.tsx  (+4 more)
docs/: ANDROID-MVP.md  GETTING-STARTED.md  IOS-APP.md  IOS-ISH-POC.md  MCP.md  MCP.zh-CN.md  NATIVE-ARCHITECTURE.md  README.md  REMOTE-RELAY.md  REPO-ARCHITECTURE.md  THIRD-PARTY-NOTICES.md  TODO.md  TOOLBOX.md
docs/archive/: ANDROID-MVP.md  IOS-ISH-POC.md
docs/notes/: ARTICLE-MIRA-RESEARCH-PROTOTYPE.md  MIRA-ANDROID-AUDIT-SIDECHANNEL.zh-CN.md  TERMUX-FORK.md  TODO.md
mira/: __init__.py  cli.py  release.py
mira/bridge/: server.py  websocket.py
mira/mcp/: server.py
mira/relay/: __init__.py  server.py
native/: CMakeLists.txt
native/bridge/android/jni/: mira_pty_jni.c
native/bridge/ios/: mira_ios_log_hook.c  mira_ios_relay.c  mira_pty_ios_shim.c  mira_pty_ios_shim.h
native/include/mira/: shell.h
native/src/frida/: frida_cli.c
native/src/platform/android/: pty_pair_android.c
native/src/posix/: pty_spawn_posix.c
native/src/pty/: pty_trace.h
native/src/shell/: builtin_shell.c  ish_hostfs.h  ish_hostfs.m  ish_shell.h  ish_shell.m  shell_core.c
skills/mira-article-updater/: SKILL.md
skills/mira-case-capture/: SKILL.md
skills/mira-detection-distill/: SKILL.md
skills/mira-mobile-risk-review/: SKILL.md
skills/mira-topic-maintainer/: SKILL.md
tools/android/: mira-emulator-audit-sidechannel.sh  mira-high-pid-shell-audit-sidechannel.sh  mira-proc-audit-sidechannel.sh  mira-shell-domain-cluster-sidechannel.sh  run-app.sh
tools/codex/: install-mira-skills.sh
tools/frida/: build-android-cli.sh
tools/ios/: build-frida-musl-devkit.sh  prepare-frida-gadget.sh  prepare-ish-frida-runtime.py  prepare-ish-rootfs.sh  run-app.sh  run-simulator.sh
tools/relay/: start-public-relay.sh
tools/termux/: build-bootstrap-prefix.py
tools/toolbox/: build-busybox-android.sh
web/: index.html  main.js  styles.css
(+59 files in other folders)
