[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mira"
version = "1.1.4"
description = "Mira desktop control, relay, and packaging toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  { name = "vw2x" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools"
]
dependencies = []

[project.scripts]
mira-cli = "mira.cli:main"
mira-relay = "mira.relay.server:main"
mira-mcp = "mira.mcp.server:main"
mira-build = "mira.release:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mira*"]
